# MerlinGL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Merlin/: Application.cpp  Application.h  CMakeLists.txt  EntryPoint.h  Layer.cpp  LayerStack.h  Logger.cpp  Logger.h  Window.cpp  Window.h
Merlin/Events/: AppEvents.h  Event.h  InputEvents.h
Merlin/src/: Merlin.h  mepch.h
Merlin/src/Merlin/: Application.cpp  Application.h  ApplicationBuilder.cpp  ApplicationBuilder.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  Window.cpp  Window.h
Merlin/src/Merlin/Assets/: Asset.h  AssetManager.h  Material.h  Mesh.h  MeshAsset.h  ModelLoader.cpp  ModelLoader.h  Shader.h  ShaderAsset.h  Texture.h  TextureAsset.cpp  TextureAsset.h
Merlin/src/Merlin/Components/: Mesh.h  Transform.h
Merlin/src/Merlin/Core/: Application.cpp  Application.h  ApplicationBuilder.cpp  ApplicationBuilder.h  Core.h  Layer.h  LayerStack.h
Merlin/src/Merlin/ECS/: Component.h  Entity.h  Registry.cpp  Registry.h  System.h
Merlin/src/Merlin/ECS/Components/: Camera.h  MeshRenderer.h  Transform.h
Merlin/src/Merlin/ECS/Systems/: RenderSystem.h
Merlin/src/Merlin/Events/: AppEvents.h  Event.h  EventBus.cpp  EventBus.h  Events.h  InputEvents.h  LogEvent.h
Merlin/src/Merlin/Gui/: Console.h  GuiLayer.cpp  GuiLayer.h  GuiModule.cpp  GuiModule.h  Profiler.h  Style.cpp  Style.h  Widget.h
Merlin/src/Merlin/Gui/Widgets/: Console.cpp  Console.h  Profiler.cpp  Profiler.h
Merlin/src/Merlin/Platform/GLFW/: GLFWInput.cpp  GLFWInput.h  Window.cpp  Window.h
Merlin/src/Merlin/Rendering/: Framebuffer.cpp  Framebuffer.h
MerlinEngine/: CMakeLists.txt
MerlinEngine/include/: MerlinCore.h
MerlinEngine/include/Merlin/: Config.h  Core.h  EntryPoint.h  Logger.h
MerlinEngine/src/: Core.cpp  Logger.cpp  MerlinCore.cpp
Sandbox/: CmakeLists.txt
Sandbox/assets/shaders/: basic.frag  basic.vert
Sandbox/src/: Editor.cpp  Editor.h  main.cpp
Sandbox/src/Widgets/: Console.h  Profiler.h
